# xbouncing

./: CMakeLists.txt  COPYING  README.md
src/: parse-xbm.c  xbm.c  xbm.h  xbouncing.c
src/img/: dvdlogo.xbm  dvdlogo_mask.xbm
